** world and lobby

--- a/HovercraftUniverse/HovercraftUniverse/HovercraftUniverse.vcproj
+++ b/HovercraftUniverse/HovercraftUniverse/HovercraftUniverse.vcproj
@@ -176,6 +176,10 @@
 			Filter="cpp;c;cc;cxx;def;odl;idl;hpj;bat;asm;asmx"
 			UniqueIdentifier="{4FC737F1-C7A5-4376-A066-2A32D752A2FF}"
 			>
+			<File
+				RelativePath=".\ServerWorldLoader.cpp"
+				>
+			</File>
 			<Filter
 				Name="GUI"
 				>
@@ -424,7 +428,7 @@
 				Name="Game"
 				>
 				<File
-					RelativePath=".\Loby.cpp"
+					RelativePath=".\Lobby.cpp"
 					>
 				</File>
 				<File
@@ -442,6 +446,10 @@
 			Filter="h;hpp;hxx;hm;inl;inc;xsd"
 			UniqueIdentifier="{93995380-89BD-4b04-88EB-625FBE52EBFB}"
 			>
+			<File
+				RelativePath=".\ServerWorldLoader.h"
+				>
+			</File>
 			<Filter
 				Name="GUI"
 				>
@@ -714,7 +722,7 @@
 				Name="Game"
 				>
 				<File
-					RelativePath=".\Loby.h"
+					RelativePath=".\Lobby.h"
 					>
 				</File>
 				<File
