--- a/trunk/HovercraftUniverse/HovercraftUniverse/HovercraftUniverse.vcproj
+++ b/trunk/HovercraftUniverse/HovercraftUniverse/HovercraftUniverse.vcproj
@@ -176,10 +176,6 @@
 			Filter="cpp;c;cc;cxx;def;odl;idl;hpj;bat;asm;asmx"
 			UniqueIdentifier="{4FC737F1-C7A5-4376-A066-2A32D752A2FF}"
 			>
-			<File
-				RelativePath=".\ServerLoader.cpp"
-				>
-			</File>
 			<Filter
 				Name="GUI"
 				>
@@ -431,74 +427,130 @@
 			<Filter
 				Name="Game"
 				>
-				<File
-					RelativePath=".\Asteroid.cpp"
+				<Filter
+					Name="Entities"
 					>
-				</File>
-				<File
-					RelativePath=".\Boost.cpp"
+					<File
+						RelativePath=".\Asteroid.cpp"
+						>
+					</File>
+					<File
+						RelativePath=".\Boost.cpp"
+						>
+					</File>
+					<File
+						RelativePath=".\CheckPoint.cpp"
+						>
+					</File>
+					<File
+						RelativePath=".\EntityDescription.cpp"
+						>
+					</File>
+					<File
+						RelativePath=".\Finish.cpp"
+						>
+					</File>
+					<File
+						RelativePath=".\Hovercraft.cpp"
+						>
+					</File>
+					<File
+						RelativePath=".\Lobby.cpp"
+						>
+					</File>
+					<File
+						RelativePath=".\Player.cpp"
+						>
+					</File>
+					<File
+						RelativePath=".\Portal.cpp"
+						>
+					</File>
+					<File
+						RelativePath=".\PowerupSpawn.cpp"
+						>
+					</File>
+					<File
+						RelativePath=".\ResetSpawn.cpp"
+						>
+					</File>
+					<File
+						RelativePath=".\ServerLoader.cpp"
+						>
+					</File>
+					<File
+						RelativePath=".\Start.cpp"
+						>
+					</File>
+					<File
+						RelativePath=".\StartPosition.cpp"
+						>
+					</File>
+					<File
+						RelativePath=".\Track.cpp"
+						>
+					</File>
+					<File
+						RelativePath=".\UserData.cpp"
+						>
+					</File>
+					<File
+						RelativePath=".\UserDataCallback.cpp"
+						>
+					</File>
+					<File
+						RelativePath=".\UserDataFactory.cpp"
+						>
+					</File>
+					<File
+						RelativePath=".\World.cpp"
+						>
+					</File>
+				</Filter>
+				<Filter
+					Name="EntityRepresentations"
 					>
-				</File>
-				<File
-					RelativePath=".\CheckPoint.cpp"
+					<File
+						RelativePath=".\AsteroidRepresentation.cpp"
+						>
+					</File>
+					<File
+						RelativePath=".\BoostRepresentation.cpp"
+						>
+					</File>
+					<File
+						RelativePath=".\CheckPointRepresentation.cpp"
+						>
+					</File>
+					<File
+						RelativePath=".\FinishRepresentation.cpp"
+						>
+					</File>
+					<File
+						RelativePath=".\HovercraftRepresentation.cpp"
+						>
+					</File>
+					<File
+						RelativePath=".\PortalRepresentation.cpp"
+						>
+					</File>
+					<File
+						RelativePath=".\StartRepresentation.cpp"
+						>
+					</File>
+					<File
+						RelativePath=".\TrackRepresentation.cpp"
+						>
+					</File>
+				</Filter>
+				<Filter
+					Name="OgreMax"
 					>
-				</File>
-				<File
-					RelativePath=".\EntityDescription.cpp"
-					>
-				</File>
-				<File
-					RelativePath=".\Finish.cpp"
-					>
-				</File>
-				<File
-					RelativePath=".\Hovercraft.cpp"
-					>
-				</File>
-				<File
-					RelativePath=".\Lobby.cpp"
-					>
-				</File>
-				<File
-					RelativePath=".\Player.cpp"
-					>
-				</File>
-				<File
-					RelativePath=".\Portal.cpp"
-					>
-				</File>
-				<File
-					RelativePath=".\PowerupSpawn.cpp"
-					>
-				</File>
-				<File
-					RelativePath=".\ResetSpawn.cpp"
-					>
-				</File>
-				<File
-					RelativePath=".\Start.cpp"
-					>
-				</File>
-				<File
-					RelativePath=".\StartPosition.cpp"
-					>
-				</File>
-				<File
-					RelativePath=".\Track.cpp"
-					>
-				</File>
-				<File
-					RelativePath=".\UserDataCallback.cpp"
-					>
-				</File>
-				<File
-					RelativePath=".\UserDataFactory.cpp"
-					>
-				</File>
-				<File
-					RelativePath=".\World.cpp"
-					>
-				</File>
+					<File
+						RelativePath=".\CustomOgreMaxScene.cpp"
+						>
+					</File>
+				</Filter>
 			</Filter>
 			<Filter
 				Name="GameEvents"
@@ -518,10 +570,6 @@
 			Filter="h;hpp;hxx;hm;inl;inc;xsd"
 			UniqueIdentifier="{93995380-89BD-4b04-88EB-625FBE52EBFB}"
 			>
-			<File
-				RelativePath=".\ServerLoader.h"
-				>
-			</File>
 			<Filter
 				Name="GUI"
 				>
@@ -801,74 +849,138 @@
 			<Filter
 				Name="Game"
 				>
-				<File
-					RelativePath=".\Asteroid.h"
+				<Filter
+					Name="Entities"
 					>
-				</File>
-				<File
-					RelativePath=".\Boost.h"
+					<File
+						RelativePath=".\Asteroid.h"
+						>
+					</File>
+					<File
+						RelativePath=".\Boost.h"
+						>
+					</File>
+					<File
+						RelativePath=".\CheckPoint.h"
+						>
+					</File>
+					<File
+						RelativePath=".\EntityDescription.h"
+						>
+					</File>
+					<File
+						RelativePath=".\Finish.h"
+						>
+					</File>
+					<File
+						RelativePath=".\Hovercraft.h"
+						>
+					</File>
+					<File
+						RelativePath=".\Lobby.h"
+						>
+					</File>
+					<File
+						RelativePath=".\Player.h"
+						>
+					</File>
+					<File
+						RelativePath=".\Portal.h"
+						>
+					</File>
+					<File
+						RelativePath=".\PowerupSpawn.h"
+						>
+					</File>
+					<File
+						RelativePath=".\ResetSpawn.h"
+						>
+					</File>
+					<File
+						RelativePath=".\ServerLoader.h"
+						>
+					</File>
+					<File
+						RelativePath=".\Start.h"
+						>
+					</File>
+					<File
+						RelativePath=".\StartPosition.h"
+						>
+					</File>
+					<File
+						RelativePath=".\Track.h"
+						>
+					</File>
+					<File
+						RelativePath=".\UserData.h"
+						>
+					</File>
+					<File
+						RelativePath=".\UserDataCallback.h"
+						>
+					</File>
+					<File
+						RelativePath=".\UserDataFactory.h"
+						>
+					</File>
+					<File
+						RelativePath=".\World.h"
+						>
+					</File>
+				</Filter>
+				<Filter
+					Name="EntityRepresentations"
 					>
-				</File>
-				<File
-					RelativePath=".\CheckPoint.h"
+					<File
+						RelativePath=".\AsteroidRepresentation.h"
+						>
+					</File>
+					<File
+						RelativePath=".\BoostRepresentation.h"
+						>
+					</File>
+					<File
+						RelativePath=".\CheckPointRepresentation.h"
+						>
+					</File>
+					<File
+						RelativePath=".\FinishRepresentation.h"
+						>
+					</File>
+					<File
+						RelativePath=".\HovercraftRepresentation.h"
+						>
+					</File>
+					<File
+						RelativePath=".\PortalRepresentation.h"
+						>
+					</File>
+					<File
+						RelativePath=".\StartRepresentation.h"
+						>
+					</File>
+					<File
+						RelativePath=".\TrackRepresentation.h"
+						>
+					</File>
+				</Filter>
+				<Filter
+					Name="OgreMax"
 					>
-				</File>
-				<File
-					RelativePath=".\EntityDescription.h"
-					>
-				</File>
-				<File
-					RelativePath=".\Finish.h"
-					>
-				</File>
-				<File
-					RelativePath=".\Hovercraft.h"
-					>
-				</File>
-				<File
-					RelativePath=".\Lobby.h"
-					>
-				</File>
-				<File
-					RelativePath=".\Player.h"
-					>
-				</File>
-				<File
-					RelativePath=".\Portal.h"
-					>
-				</File>
-				<File
-					RelativePath=".\PowerupSpawn.h"
-					>
-				</File>
-				<File
-					RelativePath=".\ResetSpawn.h"
-					>
-				</File>
-				<File
-					RelativePath=".\Start.h"
-					>
-				</File>
-				<File
-					RelativePath=".\StartPosition.h"
-					>
-				</File>
-				<File
-					RelativePath=".\Track.h"
-					>
-				</File>
-				<File
-					RelativePath=".\UserDataCallback.h"
-					>
-				</File>
-				<File
-					RelativePath=".\UserDataFactory.h"
-					>
-				</File>
-				<File
-					RelativePath=".\World.h"
-					>
-				</File>
+					<File
+						RelativePath=".\CustomOgreMaxScene.h"
+						>
+					</File>
+					<File
+						RelativePath=".\CustomOgreMaxSceneCallback.h"
+						>
+					</File>
+					<File
+						RelativePath=".\OgreMaxTypesExtension.h"
+						>
+					</File>
+				</Filter>
 			</Filter>
 			<Filter
 				Name="GameEvents"
