--- a/HovercraftUniverse/data/ogre.cfg
+++ b/HovercraftUniverse/data/ogre.cfg
@@ -5,7 +5,7 @@ Allow NVPerfHUD=No
 FSAA=0
 Floating-point mode=Fastest
 Full Screen=No
-Rendering Device=Monitor-1-NVIDIA GeForce 8600M GT
+Rendering Device=Monitor-1-ATI Radeon HD 5700 Series
 Resource Creation Policy=Create on all devices
 VSync=No
 VSync Interval=1
