* Created first revision of Menu buttons * Added menu overlay to the current application --> should become the first screen * Added mouse visualization with custom cursor for coolness and menu interaction. * Directed mouse and keyboard events to the GUIManager so the flash components get some input data. * Clicking on one of the buttons works, bot crashed when moving cursor afterwards...

--- a/HovercraftUniverse/HovercraftUniverse/HovercraftUniverse.vcproj
+++ b/HovercraftUniverse/HovercraftUniverse/HovercraftUniverse.vcproj
@@ -192,6 +192,18 @@
 					>
 				</File>
 				<File
+					RelativePath=".\MainMenu.cpp"
+					>
+				</File>
+				<File
+					RelativePath=".\MenuButton.cpp"
+					>
+				</File>
+				<File
+					RelativePath=".\MouseVisualisation.cpp"
+					>
+				</File>
+				<File
 					RelativePath=".\Position.cpp"
 					>
 				</File>
@@ -583,6 +595,18 @@
 				</File>
 				<File
 					RelativePath=".\HUD.h"
+					>
+				</File>
+				<File
+					RelativePath=".\MainMenu.h"
+					>
+				</File>
+				<File
+					RelativePath=".\MenuButton.h"
+					>
+				</File>
+				<File
+					RelativePath=".\MouseVisualisation.h"
 					>
 				</File>
 				<File
