--- a/trunk/HovercraftUniverse/data/resources.cfg
+++ b/trunk/HovercraftUniverse/data/resources.cfg
@@ -23,3 +23,8 @@ Zip=ogre/packs/skybox.zip
 
 [General]
 FileSystem=ogre
+FileSystem=levels
+FileSystem=levels/models
+FileSystem=levels/materials
+FileSystem=levels/materials/scripts
+FileSystem=levels/materials/textures
