--- a/HovercraftUniverse/HovercraftUniverse/HovercraftUniverse.vcproj
+++ b/HovercraftUniverse/HovercraftUniverse/HovercraftUniverse.vcproj
@@ -176,6 +176,14 @@
 			Filter="cpp;c;cc;cxx;def;odl;idl;hpj;bat;asm;asmx"
 			UniqueIdentifier="{4FC737F1-C7A5-4376-A066-2A32D752A2FF}"
 			>
+			<File
+				RelativePath=".\TiXmlManager.cpp"
+				>
+			</File>
+			<File
+				RelativePath=".\TiXmlResource.cpp"
+				>
+			</File>
 			<Filter
 				Name="GUI"
 				>
@@ -586,6 +594,14 @@
 			Filter="h;hpp;hxx;hm;inl;inc;xsd"
 			UniqueIdentifier="{93995380-89BD-4b04-88EB-625FBE52EBFB}"
 			>
+			<File
+				RelativePath=".\TiXmlManager.h"
+				>
+			</File>
+			<File
+				RelativePath=".\TiXmlResource.h"
+				>
+			</File>
 			<Filter
 				Name="GUI"
 				>
