Okay, so now the world has been loaded and visualized. The camera (first person and freeroam) is a little bit fucked up because the change in scale, but that will be solved in the very near future ^^. I hope you people enjoy racing on an actual world instead of on some stupid plane. Nighty nighty.

--- a/HovercraftUniverse/HovercraftUniverse/HovercraftUniverse.vcproj
+++ b/HovercraftUniverse/HovercraftUniverse/HovercraftUniverse.vcproj
@@ -547,6 +547,10 @@
 						>
 					</File>
 					<File
+						RelativePath=".\ClientPreparationLoader.cpp"
+						>
+					</File>
+					<File
 						RelativePath=".\Loader.cpp"
 						>
 					</File>
@@ -990,6 +994,10 @@
 					>
 					<File
 						RelativePath=".\ClientLoader.h"
+						>
+					</File>
+					<File
+						RelativePath=".\ClientPreparationLoader.h"
 						>
 					</File>
 					<File
